--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "nunjucks" : "^3.2.0",
-    "pg-promise" : "^9.3.3"
+    "pg-promise" : "^9.3.3",
+    "body-parser" : "^1.19.0"
   },
   "devDependencies": {
     "request": "^2.81.0",
