--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-validator": "^6.3.0",
     "helmet": "^3.21.2",
     "mongoose": "^5.7.13",
+    "node-localstorage": "^2.1.5",
     "nunjucks": "^3.2.0",
     "pg-promise": "^9.3.3"
   },
